--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://ffck-un-nouvel-elan.github.io
+baseurl: /
 
 # Site settings
 title: FFCK Un nouvel élan
