--- a/_config.yml
+++ b/_config.yml
@@ -12,68 +12,68 @@ people:
   - name: Jean Zoungrana
     pic: jean
     position: Président
-    social:
-      - title: twitter
-        url: #
-      - title: facebook
-        url: #
-      - title: stack-overflow
-        url: #
+    # social:
+    #   - title: twitter
+    #     url: #
+    #   - title: facebook
+    #     url: #
+    #   - title: stack-overflow
+    #     url: #
 
   - name: Anne-Laure Viard
     pic: anne-laure
     position: Trésorière
-    social:
-      - title: twitter
-        url: #
-      - title: facebook
-        url: #
-      - title: linkedin
-        url: #
+    # social:
+    #   - title: twitter
+    #     url: #
+    #   - title: facebook
+    #     url: #
+    #   - title: linkedin
+    #     url: #
 
   - name: Emmanuel Girard
     pic: emmanuel
     position: Secrétaire Général
-    social:
-      - title: twitter
-        url: #
-      - title: facebook
-        url: #
-      - title: google-plus
-        url: #
+    # social:
+    #   - title: twitter
+    #     url: #
+    #   - title: facebook
+    #     url: #
+    #   - title: google-plus
+    #     url: #
 
   - name: Julien Gaspard
     pic: julien
     position: Vice président
-    social:
-      - title: twitter
-        url: #
-      - title: facebook
-        url: #
-      - title: stack-overflow
-        url: #
+    # social:
+    #   - title: twitter
+    #     url: #
+    #   - title: facebook
+    #     url: #
+    #   - title: stack-overflow
+    #     url: #
 
   - name: Françoise Seiler
     pic: françoise
     position: Vice président
-    social:
-      - title: twitter
-        url: #
-      - title: facebook
-        url: #
-      - title: linkedin
-        url: #
+    # social:
+    #   - title: twitter
+    #     url: #
+    #   - title: facebook
+    #     url: #
+    #   - title: linkedin
+    #     url: #
 
   - name: Vincent Lecrubier
     pic: vincent
     position: Vice président
-    social:
-      - title: twitter
-        url: #
-      - title: facebook
-        url: #
-      - title: google-plus
-        url: #
+    # social:
+    #   - title: twitter
+    #     url: #
+    #   - title: facebook
+    #     url: #
+    #   - title: google-plus
+    #     url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
